Implemented mail triggering mechanism

--- a/authentication/src/main/resources/application.properties
+++ b/authentication/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+# SMTP server host
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+# Username and password for the SMTP server
+spring.mail.username=potturitarakanadhareddy@gmail.com
+spring.mail.password=gimlydoxkwlgwaas
+
+# Use TLS (true/false)
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
